update account form styles, add routing for cart button

--- a/src/components/UI/bookRates/UIBookRates.module.scss
+++ b/src/components/UI/bookRates/UIBookRates.module.scss
@@ -1,6 +1,7 @@
 .book_rates {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     font-family: "Bebas Neue";
     font-weight: 700;
     font-size: 24px;
