--- a/src/components/account/profile/Profile.module.scss
+++ b/src/components/account/profile/Profile.module.scss
@@ -34,7 +34,8 @@
             font-weight: 700;
             font-size: 21px;
             line-height: 120%;
-            color: var(--system-primary);
+            //color: var(--system-primary);
+            color: var(--system-primary2);
         }
     }
 }
@@ -43,16 +44,27 @@
     margin-left: auto;
     width: 60%;
 
+    .profile {
+        margin-bottom: 20px;
+    }
+
     .profile,
     .password {
         .profile_title,
         .password_title {
-            font-family: 'Helios';
-            font-weight: 700;
-            font-size: 24px;
-            line-height: 200%;
-            color: var(--system-primary);
-            text-decoration: underline;
+            text-align: center;
+            padding: 2px;
+            border-radius: 5px;
+            background-color: var(--bg-primary2);
+
+            span {
+                font-family: 'Helios';
+                font-weight: 700;
+                font-size: 24px;
+                line-height: 200%;
+                // color: var(--system-primary);
+                color: var(--system-primary2);
+            }
         }
     } 
 }
