add fonts folder, update App.tsx( update body style), update links styles

--- a/src/components/UI/bookRates/UIBookRates.module.scss
+++ b/src/components/UI/bookRates/UIBookRates.module.scss
@@ -9,6 +9,7 @@
 
     .price_absent {
         span {
+            display: block;
             font-size: 18px;
             line-height: 123%;
         }
