--- a/src/components/sidebar/Sidebar.module.scss
+++ b/src/components/sidebar/Sidebar.module.scss
@@ -47,7 +47,7 @@
     }
 
     .nav_link {
-        display: inline-block;
+        display: flex;
         margin: 0 15px 0 auto;
 
         &::after {
@@ -56,6 +56,7 @@
     }
 
     .close_menu {
+        display: flex;
         background-color: transparent;
     }
 }
@@ -85,6 +86,7 @@
 
 @media (max-width: 500px) {
     .sidebar_content {
+        padding: 40px 20px 36px;
         width: 100%;
     }
 }
