update fonts in index scss

--- a/src/index.scss
+++ b/src/index.scss
@@ -17,21 +17,21 @@
 	font-style: normal;
 } 
 @font-face {
-	font-family: 'Helios', sans-serif;
+	font-family: 'Helios';
 	src: url('fonts/Helios/helios.eot');
 	src: local('☺'), url('fonts/Helios/helios.woff') format('woff'), url('fonts/Helios/helios.ttf') format('truetype'), url('fonts/Helios/helios.svg') format('svg');
 	font-weight: 400;
 	font-style: normal;
 }
 @font-face {
-	font-family: 'Helios', sans-serif;
+	font-family: 'Helios';
 	src: url('fonts/Helios/heliosbold.eot');
 	src: local('☺'), url('fonts/Helios/heliosbold.woff') format('woff'), url('fonts/Helios/heliosbold.ttf') format('truetype'), url('fonts/Helios/heliosbold.svg') format('svg');
 	font-weight: 700;
 	font-style: normal;
 }
 @font-face {
-	font-family: 'Helios', sans-serif;
+	font-family: 'Helios';
 	src: url('fonts/Helios/heliosbolditalic.eot');
 	src: local('☺'), url('fonts/Helios/heliosbolditalic.woff') format('woff'), url('fonts/Helios/heliosbolditalic.ttf') format('truetype'), url('fonts/Helios/heliosbolditalic.svg') format('svg');
 	font-weight: 400;
