--- a/src/components/account/profile/Profile.module.scss
+++ b/src/components/account/profile/Profile.module.scss
@@ -11,18 +11,86 @@
     align-items: center;
     width: 30%;
 
-    .avatar {
-        width: 200px;
-        height: 200px;
-        border-radius: 50%;
+    .avatar_container {
+        position: relative;
         overflow: hidden;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-    
-        img {
+
+        &::after {
+            content: '';
+            position: absolute;
+            z-index: 2;
+            top: 0;
+            left: 0;
+            bottom: 0;
+            right: 0;
+            border-radius: 50%;
+            background-color: var(--system-primary);
+            opacity: 0;
+            cursor: pointer;
+            transition: all 0.3s;
+        }
+        &:hover::after {
+            opacity: 0.8;
+        }
+        &:hover {
+            & > :last-child {
+                bottom: 0;
+            } 
+        }
+
+        .avatar {
+            width: 200px;
+            height: 200px;
+            border-radius: 50%;
+            overflow: hidden;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        
+            img {
+                width: 100%;
+                object-fit: cover;
+            }
+        }
+        .upload_container {
+            position: absolute;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            padding: 10px;
+            z-index: 3;
             width: 100%;
-            object-fit: cover;
+            height: 100%;
+            bottom: -100%;
+            left: 0;
+            cursor: pointer;
+            transition: all 0.3s;
+
+            .upload_label {
+                display: flex;
+                align-items: center;
+                justify-items: center;
+                text-align: center;
+                width: 100%;
+                height: 100%;
+                color: var(--bg-primary);
+                cursor: pointer;
+
+                span {
+                    margin: auto;
+                }
+            }
+            .upload_input {
+                display: none;
+            }
+            .upload_icon {
+                position: absolute;
+                z-index: -1;
+                top: 55%;
+                font-size: 30px;
+                color: var(--bg-primary);
+            }
         }
     }
 
