--- a/src/components/account/profile/Profile.module.scss
+++ b/src/components/account/profile/Profile.module.scss
@@ -49,29 +49,22 @@
         
             img {
                 width: 100%;
+                height: 100%;
                 object-fit: cover;
             }
         }
         .upload_container {
             position: absolute;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            padding: 10px;
             z-index: 3;
             width: 100%;
             height: 100%;
             bottom: -100%;
             left: 0;
             cursor: pointer;
-            transition: all 0.3s;
+            transition: all 0.5s;
 
             .upload_label {
                 display: flex;
-                align-items: center;
-                justify-items: center;
-                text-align: center;
                 width: 100%;
                 height: 100%;
                 color: var(--bg-primary);
@@ -88,6 +81,8 @@
                 position: absolute;
                 z-index: -1;
                 top: 55%;
+                left: 50%;
+                transform: translate(-50%);
                 font-size: 30px;
                 color: var(--bg-primary);
             }
