--- a/src/components/account/profile/Profile.module.scss
+++ b/src/components/account/profile/Profile.module.scss
@@ -138,6 +138,20 @@
     width: 40%;
     margin: 40px 0 0 auto;
 }
+.edit_control {
+    position: absolute;
+    top: -5px;
+    right: 0;
+    background-color: transparent;
+    padding: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    &_icon {
+        font-size: 20px;
+    }
+}
 
 @media (max-width: 992px) {
     .profile_controls {
